--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  PUSH: ${{ (github.event_name != 'pull_request') && (github.repository == 'apl-ocean-engineering/foxglove-bridge-docker') }}
+  PUSH: ${{ github.event_name != 'pull_request' }}
 
 jobs:
   docker_build:
